--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lit-js-sdk": "^1.1.198",
     "magic-sdk": "^13.1.0",
     "moralis": "^1.8.1",
+    "moralis-v1": "^1.12.0",
     "next": "latest",
     "nft.storage": "^6.4.0",
     "react": "18.1.0",
